# PSL_UDP

./: README.md
WS2812/: WS2812.entitlements
WS2812 Controller/WS2812 Controller/: ContentView.swift  WS2812_ControllerApp.swift
WS2812 Controller/WS2812 Controller.xcodeproj/: project.pbxproj
WS2812 Controller/WS2812 Controller.xcodeproj/project.xcworkspace/xcuserdata/isaac.xcuserdatad/: UserInterfaceState.xcuserstate
WS2812 Controller/WS2812 Controller.xcodeproj/xcuserdata/isaac.xcuserdatad/xcschemes/: xcschememanagement.plist
WS2812/WS2812/: ContentView.swift  WS2812App.swift
WS2812/WS2812.xcodeproj/: project.pbxproj
WS2812/WS2812.xcodeproj/project.xcworkspace/xcuserdata/isaac.xcuserdatad/: UserInterfaceState.xcuserstate
WS2812/WS2812.xcodeproj/xcuserdata/isaac.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
WS2812/WS2812.xcodeproj/xcuserdata/isaac.xcuserdatad/xcschemes/: xcschememanagement.plist
firmware/: CMakeLists.txt  psl_motion.gatt  qbuild.sh
firmware/setupToolchain/: setup.sh
firmware/src/: btstack_config.h  dhcpserver.c  lwipopts.h  main.c  psl_motion_gatt.h  ws2812.pio
shameful_code/LEPeripheral/: LEPeripheral.ino
